// ============================================================
// CRM Golden Dataset - ERD
// Paste directly into https://dbdiagram.io/
// ============================================================
//
// STATUS: Draft v0.2 - aligned with the canonical DDL after client
// domain-separation feedback.
//
// Executable source of truth:
//   schemas/crm/crm_ddl.sql
//   Table order, field order, data types, nullability, defaults, PKs, unique
//   keys, and FKs in this ERD are aligned with the canonical DDL.
//
// Domain boundary:
//   CRM covers customer engagement, support-case resolution and SLA behavior,
//   campaign participation, and campaign attribution.
//   Sales owns leads, deals, opportunities/pipeline, products, quotations,
//   revenue, sales representatives, and quota attainment.
//   No cross-domain foreign keys are introduced.
//
// Currency policy:
//   CRM is a USD-only dataset. campaigns.currency_code must always be USD.
//   CRM does not support mixed-currency aggregation or FX conversion; those
//   behaviors belong to the Finance domain and its fx_rates table.
//
// Primary analytical themes:
//   Engagement scoring:
//     SUM(interactions.engagement_points) by contact, account, channel,
//     engagement type, campaign, and period.
//   Case-resolution SLA:
//     resolved within SLA = resolved_at <= sla_due_at
//     resolved breach      = resolved_at > sla_due_at
//     open breach          = resolved_at IS NULL AND fixed_today > sla_due_at
//     resolution duration  = resolved_at - opened_at
//   Campaign attribution:
//     contacts -> contact_campaigns <- campaigns
//     interactions.campaign_id identifies campaign-attributed touchpoints;
//     NULL campaign_id represents organic or unattributed engagement.
//
// Join semantics:
//   INNER JOIN paths must produce non-empty results:
//     support_cases -> accounts
//     interactions -> contacts
//     contact_campaigns -> contacts
//     contact_campaigns -> campaigns
//   LEFT OUTER JOIN paths must produce unmatched rows:
//     accounts -> contacts (accounts without contacts)
//     contacts -> interactions (contacts without engagement)
//     contacts -> support_cases (contacts without support cases)
//     campaigns -> interactions (campaigns without attributed interactions)
//     interactions -> campaigns (organic or unattributed interactions)
//
// Controlled imperfection candidates:
//   contacts: near-duplicate rows ~1%
//   contact_campaigns.attribution_weight: NULLs 2-3%
//   interactions.engagement_points: high-value outliers ~0.5%
//   support_cases resolution/SLA timestamps: deterministic boundary values
//   Nullable relationship fields preserve valid non-empty foreign keys.
//
// NOT-NULL rules:
//   INNER-JOIN FKs are NOT NULL:
//     support_cases.account_id
//     interactions.contact_id
//     contact_campaigns.contact_id
//     contact_campaigns.campaign_id
//   LEFT-JOIN or attribution FKs are nullable:
//     contacts.account_id
//     support_cases.contact_id
//     interactions.account_id
//     interactions.campaign_id
//
// Explicit many-to-many bridge:
//   contacts -> contact_campaigns <- campaigns
//   The bridge uses a composite PK and stores participation and attribution
//   attributes. A contact may participate in multiple campaigns, and a campaign
//   may contain multiple contacts.

// ------------------------------------------------------------
// ACCOUNTS
// ------------------------------------------------------------
Table accounts {
  account_id integer [pk, not null, note: 'Unique customer account ID']
  account_name varchar(255) [not null, note: 'Synthetic customer organization name']
  account_size integer [note: 'Synthetic company-size measure']
  industry varchar(64)
  region varchar(64)
  customer_tier varchar(32) [note: 'enum: Standard | Preferred | Strategic']
  is_active boolean [not null, default: true]
  created_at timestamp [not null]

  Note: 'Customer dimension. Account health and engagement are derived from related interactions and support cases; no sales revenue or pipeline fields are stored.'
}

// ------------------------------------------------------------
// CONTACTS
// ------------------------------------------------------------
Table contacts {
  contact_id integer [pk, not null, note: 'Unique customer contact ID']
  account_id integer [ref: >? accounts.account_id, note: 'Nullable account FK; supports contacts without an account and accounts without contacts']
  first_name varchar(128) [not null]
  last_name varchar(128) [not null]
  email varchar(255) [not null]
  address varchar(255) [note: 'Synthetic single-line contact address']
  title varchar(128)
  is_active boolean [not null, default: true]
  created_at timestamp [not null]

  Note: 'Customer-contact dimension. Near-duplicate contact imperfection focus (~1%). Engagement score is derived from SUM(interactions.engagement_points), not stored as a shortcut.'
}

// ------------------------------------------------------------
// CAMPAIGNS
// ------------------------------------------------------------
Table campaigns {
  campaign_id integer [pk, not null, note: 'Unique campaign ID']
  campaign_name varchar(255) [not null]
  campaign_type varchar(64) [not null, note: 'enum: Awareness | Nurture | Retention | Reengagement | CustomerEducation']
  primary_channel varchar(32) [not null, note: 'enum: Email | Phone | Web | Webinar | Event | Social']
  status varchar(32) [not null, note: 'enum: Draft | Scheduled | Active | Completed | Cancelled']
  start_date date [not null]
  end_date date [note: 'Nullable for active or open-ended campaigns; when populated it must be on or after start_date']
  budget_amount decimal(15, 2) [note: 'Nullable USD campaign budget; not sales revenue']
  currency_code char(3) [not null, default: 'USD', note: 'Fixed value: USD. Mixed currencies and FX conversion are outside CRM scope']
  created_at timestamp [not null]

  Note: 'Campaign dimension for participation, engagement, and attribution questions. All budget amounts are USD-only. Campaign outcomes are measured through contact membership and attributed interactions rather than deal revenue.'
}

// ------------------------------------------------------------
// CONTACT_CAMPAIGNS
// ------------------------------------------------------------
Table contact_campaigns {
  contact_id integer [not null, ref: > contacts.contact_id, note: 'INNER JOIN path - NOT NULL']
  campaign_id integer [not null, ref: > campaigns.campaign_id, note: 'INNER JOIN path - NOT NULL']
  member_status varchar(32) [not null, note: 'enum: Targeted | Sent | Engaged | Responded | Converted | OptedOut']
  first_touch_at timestamp [note: 'First campaign touch for the contact']
  last_touch_at timestamp [note: 'Most recent campaign touch; when both touches exist it must be on or after first_touch_at']
  attribution_weight decimal(5, 4) [note: 'Nullable value from 0.0000 to 1.0000 for multi-touch attribution']
  is_primary_attribution boolean [not null, default: false, note: 'Marks the primary attributed campaign for a contact when one is assigned']
  created_at timestamp [not null]

  indexes {
    (contact_id, campaign_id) [pk, name: 'pk_contact_campaigns']
  }

  Note: 'Explicit many-to-many junction between contacts and campaigns. The composite PK prevents duplicate membership pairs while relationship-level fields support participation and multi-touch attribution analysis.'
}

// ------------------------------------------------------------
// INTERACTIONS
// ------------------------------------------------------------
Table interactions {
  interaction_id integer [pk, not null, note: 'Unique customer engagement event ID']
  contact_id integer [not null, ref: > contacts.contact_id, note: 'INNER JOIN path - NOT NULL']
  account_id integer [ref: >? accounts.account_id, note: 'Nullable redundant account path; when populated it must agree with the contact account']
  campaign_id integer [ref: >? campaigns.campaign_id, note: 'Nullable campaign attribution; NULL means organic or unattributed engagement']
  engagement_type varchar(64) [not null, note: 'enum: EmailOpen | LinkClick | FormSubmission | PhoneCall | Meeting | WebinarAttendance | EventAttendance']
  channel varchar(32) [not null, note: 'enum: Email | Phone | Web | Webinar | Event | Social']
  direction varchar(16) [not null, note: 'enum: Inbound | Outbound']
  engagement_points integer [not null, note: 'Non-negative deterministic points used to derive contact and account engagement scores']
  interaction_at timestamp [not null]
  created_at timestamp [not null]

  Note: 'Engagement fact table. Contact/account engagement scores are derived through SUM(engagement_points). Campaign attribution uses campaign_id without introducing sales opportunities or revenue.'
}

// ------------------------------------------------------------
// SUPPORT_CASES
// ------------------------------------------------------------
Table support_cases {
  case_id integer [pk, not null, note: 'Unique support case ID']
  account_id integer [not null, ref: > accounts.account_id, note: 'INNER JOIN path - NOT NULL']
  contact_id integer [ref: >? contacts.contact_id, note: 'Nullable requesting contact; supports account-level cases']
  case_number varchar(64) [not null, unique, note: 'Synthetic business-facing case reference']
  subject varchar(255) [
    not null,
    note: 'Synthetic short summary of the customer issue or service request'
  ]
  category varchar(64) [not null, note: 'enum: ProductIssue | Billing | Access | Integration | ServiceRequest | GeneralInquiry']
  priority varchar(16) [not null, note: 'enum: Low | Medium | High | Critical']
  status varchar(32) [not null, note: 'enum: New | InProgress | PendingCustomer | Resolved | Closed']
  opened_at timestamp [not null]
  sla_due_at timestamp [not null, note: 'Resolution deadline used for derived SLA compliance; must be on or after opened_at']
  resolved_at timestamp [note: 'Nullable for unresolved cases; must be on or after opened_at when populated']
  created_at timestamp [not null]

  Note: 'Customer-service fact table for case volume, resolution duration, backlog, and SLA compliance. SLA breach and resolution hours are derived from timestamps rather than stored as shortcut fields.'
}
